!Fix: Dark mode toggle fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 .dark-background {
-  background-color: linear-gradient(#0c011b, #0b0315, #0c011b);
+  background: linear-gradient(39deg,#000000, #20093c, #000000);
   background-position: center;
-  background-image: url("./assets/BackgroundPhotos/darkBG.svg");
+  /* background-image: url("./assets/BackgroundPhotos/darkBG.svg"); */
   background-repeat: no-repeat;
   background-size: 110vw;
   background-attachment: fixed;
 }
 
 .light-background {
-  background-color: linear-gradient(#8a8a8a, #dbdbdb, #8a8a8a);
+  background: linear-gradient(39deg,#cfcfcf, #ffffff, #cfcfcf);
   background-position: center;
-  background-image: url("./assets/BackgroundPhotos/lightBG.svg");
+  /* background-image: url("./assets/BackgroundPhotos/lightBG.svg"); */
   background-repeat: no-repeat;
   background-size: 100vw;
   background-attachment: fixed;
